# errbrac

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: cov.yml  mypy.yml  nox.yml  ruff.yml  tox.yml  typecheck.yml
errbrac/: __init__.py
tests/: test_errorbracket.py  test_parse.py  test_str.py
